package com.github.studeasy.dao.jobDAO;

/**
 * Interface for the Job DAO
 * Contains the methods needed by the Job DAO
 */
public abstract class JobDAO {
}
