package com.github.studeasy.logic.facades;

/**
 * The Facade User for the JobDAO
 * It contains methods that allow to create,update,delete,... Job
 */
public class FacadeJob {
}
